tdf#91074 RTF import: handle \dplineco* for text frames

RTFSdrImport::resolve() already had the logic to use the relevant API
depending on if the shape is a text frame or not -- extract that to a
separate member function and use it from RTFDocumentImpl::popState(),
too.

(cherry picked from commit ec1a96e79e3e6225706151cb72eb3df763b0598d)

Conflicts:
	sw/qa/extras/rtfimport/rtfimport.cxx
	writerfilter/source/rtftok/rtfsdrimport.cxx
	writerfilter/source/rtftok/rtfsdrimport.hxx

Change-Id: I663b372244f09f002447ece62587143b2a575795
Reviewed-on: https://gerrit.libreoffice.org/15939
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>